Refactor: es 증분 동기화 및 redis 데이터 영속성 설정